# Waveform-EEG-AIStudio

./: .gitattributes  .gitignore  DATA_LICENSE.md  DATA_NOTICE.md  README.md  package.json  pyproject.toml  requirements.txt  run.sh  win001.h5
.claude/: launch.json
agent/: README.md
agent/backend/: datastore.py  plugin.py  proxy.py  sandbox.py  sandbox_worker.py  skills.py
agent/knowledge/: README.md  agent_operating_principles.md  artifacts_and_quality.md  clinical_eeg_review_framework.md  frequency_bands_and_filters.md  signal_workspace.md  source_index.md
agent/skills/long-ieeg-seizure-localization/: SKILL.md
agent/web/: agent-settings.css  agent.css  agent.js  conversation-export.js  conversations.js  intent-policy.js  markdown.js  prompt.js  settings-store.js  skills-client.js  skills-ui.js  stream.js  tool-definitions.js  tools.js  ui.js
backend/: app.py  config.py  routes.py
backend/core/: envelope.py  exporters.py  util.py
bench/: make_big_recording.py  run_bench.py
frontend/: index.html
frontend/css/: base.css  components.css  sidebar.css  stage.css
frontend/js/: main.js
test/: agent-attachments.test.js  agent-events.test.js  agent-intent-policy.test.js  agent-side-effects.test.js  agent-skills.test.js  agent-tool-registry.test.js  agent-windowed-tools.test.js  conversation-export.test.js  conversations.test.js  events.test.js  export-guards.test.js  model-presets.test.js  project-tree.test.js  runtime-config.test.js  signal-image-plan.test.js  test_exports.py  test_proxy.py  test_sandbox.py  test_skills.py  windowed-agent-context.test.js
(+30 files in other folders)
