[project]
name = "eegviewer"
version = "0.2.0"
description = "Local neural-signal workspace with an EEG analysis agent"
readme = "README.md"
requires-python = "==3.11.*"
license = "Apache-2.0"
dependencies = [
  "starlette==1.0.0",
  "uvicorn==0.46.0",
  "python-multipart==0.0.26",
  "numpy==2.3.5",
  "h5py==3.16.0",
  "pyedflib==0.1.42",
  "scipy==1.17.1",
  "matplotlib==3.10.8",
]

[tool.uv]
package = false
